<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_short_name">URinthH</string>
    <string name="login_online_username_hint">Username</string>
    <string name="login_online_login_label">Login</string>
    <string name="hint_control_mapping">Touch the cogwheel icon to open the context menu ⚙\nTap a button to customize: edit, resize, remove, or change its keybinds.</string>
    <string name="warning_remove_account">This account will be removed!</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">MJLauncher has unexpectedly crashed</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_java_sandbox">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_disable_gestures">Disable gestures</string>
    <string name="mcl_disable_gestures_subtitle">Disables gestures, such as hold to break block, and tap to place a block.</string>
    <string name="mcl_disable_swap_hand">Disable double tap to swap hands</string>
    <string name="mcl_disable_swap_hand_subtitle">Disables double tapping on the hotbar item to swap it in the second hand.</string>
    <string name="mcl_setting_title_mousespeed">Mouse Speed</string>
    <string name="mcl_setting_subtitle_mousespeed">Changes the speed of the virtual mouse.</string>
    <string name="mcl_memory_allocation">Memory allocation</string>
    <string name="mcl_memory_allocation_subtitle">Controls how much memory is given to the Java runtime.</string>
    <string name="multirt_title">Runtime Manager</string>
    <string name="multirt_subtitle">Manage installed Java Runtimes.</string>
    <string name="preference_mouse_start_title">Start with virtual mouse on</string>
    <string name="preference_mouse_start_description">The virtual mouse appears at startup when this option is on.</string>
    <string name="preference_sustained_performance_title">Enable sustained performance mode</string>
    <string name="preference_sustained_performance_description">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_force_vsync_title">Force enable VSync</string>
    <string name="preference_force_vsync_description">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_use_angle_title">Use ANGLE</string>
    <string name="preference_use_angle_description">Allows using ANGLE instead of the system driver. Can fix graphical issues with mods on some GPUs</string>
    <string name="preference_force_english_title">Force language to English</string>
    <string name="preference_force_english_description">Allows you to see original strings, as intended by developers. Requires a restart.</string>
    <string name="preference_edit_controls_title">Edit custom controls</string>
    <string name="preference_edit_controls_summary">Tweak the control scheme to fit your needs.</string>
    <string name="preference_category_gyro_controls">Gyroscope controls</string>
    <string name="preference_category_virtual_mouse">Virtual mouse</string>
    <string name="preference_gyro_invert_x_axis">Invert X axis</string>
    <string name="preference_gyro_invert_y_axis">Invert Y axis</string>
    <string name="preference_gyro_invert_x_axis_description">Invert the horizontal axis.</string>
    <string name="preference_gyro_invert_y_axis_description">Invert the vertical axis.</string>
    <string name="preference_gyro_smoothing_title">Enable gyroscope smoothing</string>
    <string name="preference_gyro_smoothing_description">Reduce jitter in exchange of latency.</string>
    <string name="preference_enable_gyro_title">Enable gyroscope controls</string>
    <string name="preference_enable_gyro_description">Enabling this will allow you to turn in-game by turning your phone.</string>
    <string name="preference_gyro_sensitivity_title">Gyroscope controls sensitivity</string>
    <string name="preference_gyro_sensitivity_description">Adjust the sensitivity of gyroscope controls.</string>
    <string name="preference_gyro_sample_rate_title">Gyroscope sampling rate</string>
    <string name="preference_gyro_sample_rate_description">If you have performance issues with gyroscope controls, increase this.</string>
    <string name="mcl_setting_title_buttonallcaps">Only use capital letters in button labels</string>
    <string name="mcl_setting_subtitle_buttonallcaps">Disable this if you want to use lowercase letters in your controls.</string>
    <string name="preference_shader_dump_title">Enable shader dumping</string>
    <string name="preference_shader_dump_description">Log converted shaders into the log file.</string>
    <string name="preference_category_controller_settings">Controller settings</string>
    <string name="preference_wipe_controller_title">Reset controller mapping</string>
    <string name="preference_wipe_controller_description">Allows you to remap the controller buttons.</string>
    <string name="preference_deadzone_scale_title">Joystick deadzone scale</string>
    <string name="preference_deadzone_scale_description">Increase it if the joystick drifts.</string>
    <string name="preference_microphone_access_title">Request microphone access permission</string>
    <string name="preference_microphone_access_description">Requests system to give access to device microphone for the game</string>
    <string name="preference_force_big_core_title">Force the renderer to run on the big core</string>
    <string name="preference_force_big_core_desc">Forces the game\'s render thread to run on the core with the highest maximum frequency.</string>
    <string name="preference_vulkan_driver_system_title">Use system Vulkan driver</string>
    <string name="preference_vulkan_driver_system_description">Force the launcher to use the system Vulkan driver instead of Turnip on Adreno GPUs. Only affects Zink and mods that use Vulkan.</string>
    <string name="preference_download_source_title">Game download source</string>
    <string name="preference_download_source_description">Select a download mirror instead of using the official download server</string>
    <string name="preference_verify_manifest_title">Verify game version manifest</string>
    <string name="preference_verify_manifest_description">When enabled, the launcher will check the game version manifest along with the libraries.</string>
    <string name="preference_category_gestures">Gestures</string>
    <string name="preference_category_buttons">Buttons</string>
    <string name="preference_category_experimental_settings">Experimental fuckury</string>
    <string name="preference_category_java_tweaks">Java Tweaks</string>
    <string name="preference_category_miscellaneous">Miscellaneous settings</string>
    <string name="preference_category_video">Video settings</string>
    <string name="preference_ask_for_notification_title">Allow notifications</string>
    <string name="preference_ask_for_notification_description">Click to re-request the notification permission, required for game/modpack background downloads to work properly.</string>
    <string name="preference_remap_controller_title">Change controller key bindings</string>
    <string name="preference_remap_controller_description">Allows you to modify the keyboard keys bound to each controller button</string>
    <string name="preference_verify_game_files_title">Verify game files</string>
    <string name="preference_verify_game_files_description">Verify downloaded game files against the checksum and size set in the metadata. Metadata JSON files are verified regardless of this setting.</string>
    <string name="preference_go_vroom_title">Fast game startup</string>
    <string name="preference_go_vroom_description">Don\'t verify file checksums upon sequential restarts. Makes the game start-up very fast.</string>
    <string name="preference_sysmem_title">Force rendering into the system memory</string>
    <string name="preference_sysmem_summary">Forces Freedreno to render directly into the system memory. Enable if performance is low or you experience rendering issues</string>
    <string name="preference_category_keyboard">Keyboard settings</string>
    <string name="preference_keyboard_autopan_title">Enable keyboard panning</string>
    <string name="preference_keyboard_autopan_summary">Allows on-screen keyboard to move the game window instead of overlapping it if the last touch was below the visible zone. Has no effect on custom control layout buttons with the same function</string>
    <string name="preference_data_migration_title">Import data</string>
    <string name="preference_data_migration_summary">Begin importing data (instances, control maps) from the old app installation</string>
    <string name="preference_alsoft_opensl_title">Forcefully use OpenSL for audio</string>
    <string name="preference_alsoft_opensl_summary">Forcefully enables OpenSL backend in ALSoft instead of Oboe. Can fix audio capture issues on some devices. Disable if you see audio playback/capture issues</string>
    <string name="preference_show_memory_warning_title">Show memory warning dialog</string>
    <string name="preference_show_memory_warning_summary">If enabled, displays the warning dialog that is shown during game launch if the amount of free memory is less than allocated to the game</string>
    <string name="preference_metadata_clear">Clear metadata cache</string>
    <string name="preference_metadata_clear_summary">Removes all strings metadata cache and forces a rebuild. Use this if the launcher can\'t see new game or modloader versions</string>
    <string name="preference_button_transparency">Buttons transparency</string>
    <string name="preference_button_transparency_summary">Changes on-screen buttons transparency</string>
    <string name="preference_ubwc_title">Enable UBWC compression workaround</string>
    <string name="preference_ubwc_summary">Enables \"tp_ubwc_flag_hint\" flag needed for select Adreno GPUs (Adreno 740). Enable if you see rendering issues on freedreno or Turnip</string>
</resources>