<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app2="http://schemas.android.com/apk/res-auto">


        

        

        


        
<SwitchPreferenceCompat
        android:title="@string/preference_force_english_title"
        android:key="force_english"
        android:summary="@string/preference_force_english_description"
        android:icon="@drawable/ic_modrinth_language"
        android:icon="@drawable/ic_modrinth_setting"/>

    <Preference
        android:title="@string/preference_ask_for_notification_title"
        android:summary="@string/preference_ask_for_notification_description"
        android:key="notification_permission_request"
        android:icon="@drawable/ic_modrinth_setting"
        />

<PreferenceCategory android:layout="@layout/preference_category_modrinth" android:title="@string/preference_category_video" >
        <androidx.preference.ListPreference
            android:title="@string/mcl_setting_category_renderer"
            android:key="renderer"
            android:defaultValue="opengles2"
            android:icon="@drawable/ic_modrinth_video"
            app2:useSimpleSummaryProvider="true"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            android:icon="@drawable/ic_modrinth_video"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:min="@integer/resolution_seekbar_min"
            app2:seekBarIncrement="@integer/resolution_seekbar_increment"
            android:icon="@drawable/ic_modrinth_video"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:defaultValue="false"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="use_angle"
            android:summary="@string/preference_use_angle_description"
            android:title="@string/preference_use_angle_title"
            />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_modrinth_video"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"/>
    </PreferenceCategory>

<Preference
        android:title="@string/preference_edit_controls_title"
        android:summary="@string/preference_edit_controls_summary"
        app2:icon="@drawable/ic_modrinth_setting">
        <intent android:targetPackage="@string/application_package" android:targetClass="net.kdt.pojavlaunch.CustomControlsActivity" android:action=".CustomControlsActivity"/>
    </Preference>

    <PreferenceCategory android:layout="@layout/preference_category_modrinth"
        android:title="@string/preference_category_gestures">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_modrinth_controls"
            android:key="disableGestures"
            android:summary="@string/mcl_disable_gestures_subtitle"
            android:title="@string/mcl_disable_gestures" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableDoubleTap"
            android:summary="@string/mcl_disable_swap_hand_subtitle"
            android:title="@string/mcl_disable_swap_hand"
            android:icon="@drawable/ic_modrinth_controls"/>

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="timeLongPressTrigger"
            android:summary="@string/mcl_setting_subtitle_longpresstrigger"
            android:title="@string/mcl_setting_title_longpresstrigger"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:min="@integer/gesture_delay_seekbar_min"
            android:max="@integer/gesture_delay_seekbar_max"
            app2:seekBarIncrement="@integer/gesture_delay_seekbar_increment"
            android:icon="@drawable/ic_modrinth_controls"
            />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_modrinth"
        android:title="@string/preference_category_buttons">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="buttonscale"
            android:title="@string/mcl_setting_title_buttonscale"
            android:summary="@string/mcl_setting_subtitle_buttonscale"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:min="@integer/button_scale_seekbar_min"
            android:max="@integer/button_scale_seekbar_max"
            app2:seekBarIncrement="@integer/button_scale_seekbar_increment"
            android:icon="@drawable/ic_modrinth_controls"
            />
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="buttonTransparency"
            android:title="@string/preference_button_transparency"
            android:summary="@string/preference_button_transparency_summary"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:min="0"
            android:max="100"
            app2:seekBarIncrement="@integer/button_scale_seekbar_increment"
            />
        <SwitchPreferenceCompat
            android:key="buttonAllCaps"
            android:defaultValue="true"
            android:title="@string/mcl_setting_title_buttonallcaps"
            android:summary="@string/mcl_setting_subtitle_buttonallcaps"
            android:icon="@drawable/ic_modrinth_controls"
            />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_modrinth"
        android:title="@string/preference_category_virtual_mouse">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousescale"
            android:summary="@string/mcl_setting_subtitle_mousescale"
            android:title="@string/mcl_setting_title_mousescale"

            app2:selectable="false"
            app2:min="@integer/mouse_scale_seekbar_min"
            android:max="@integer/mouse_scale_seekbar_max"
            app2:seekBarIncrement="@integer/mouse_scale_seekbar_increment"
            app2:showSeekBarValue="true"
            android:icon="@drawable/ic_modrinth_sliders"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousespeed"
            android:summary="@string/mcl_setting_subtitle_mousespeed"
            android:title="@string/mcl_setting_title_mousespeed"
            android:icon="@drawable/ic_modrinth_sliders"
            app2:selectable="false"
            app2:min="@integer/mouse_speed_seekbar_min"
            android:max="@integer/mouse_speed_seekbar_max"
            app2:seekBarIncrement="@integer/mouse_speed_seekbar_increment"
            app2:showSeekBarValue="true" />
        <SwitchPreferenceCompat
            android:key="mouse_start"
            android:title="@string/preference_mouse_start_title"
            android:summary="@string/preference_mouse_start_description"
            android:icon="@drawable/ic_modrinth_sliders"/>
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_modrinth"
        android:key="gyroCategory"
        android:title="@string/preference_category_gyro_controls"
        >
        <SwitchPreferenceCompat
            android:key="enableGyro"
            android:title="@string/preference_enable_gyro_title"
            android:summary="@string/preference_enable_gyro_description"/>
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSensitivity"
            android:title="@string/preference_gyro_sensitivity_title"
            android:summary="@string/preference_gyro_sensitivity_description"
            app2:selectable="false"
            app2:min="@integer/gyro_speed_seekbar_min"
            android:max="@integer/gyro_speed_seekbar_max"
            app2:seekBarIncrement="@integer/gyro_speed_seekbar_increment"
            app2:showSeekBarValue="true"/>
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSampleRate"
            android:title="@string/preference_gyro_sample_rate_title"
            android:summary="@string/preference_gyro_sample_rate_description"
            app2:min="@integer/gyro_rate_seekbar_min"
            android:max="@integer/gyro_rate_seekbar_max"
            app2:selectable="false"
            app2:showSeekBarValue="true"/>
        <SwitchPreferenceCompat
            android:key="gyroSmoothing"
            android:title="@string/preference_gyro_smoothing_title"
            android:summary="@string/preference_gyro_smoothing_description"
            android:defaultValue="true"
            />
        <SwitchPreferenceCompat
            android:key="gyroInvertX"
            android:title="@string/preference_gyro_invert_x_axis"
            android:summary="@string/preference_gyro_invert_x_axis_description"/>
        <SwitchPreferenceCompat
            android:key="gyroInvertY"
            android:title="@string/preference_gyro_invert_y_axis"
            android:summary="@string/preference_gyro_invert_y_axis_description"/>

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_modrinth"
        android:title="@string/preference_category_controller_settings"
        >
        <Preference
            android:title="@string/preference_remap_controller_title"
            android:summary="@string/preference_remap_controller_description"
            android:fragment="net.kdt.pojavlaunch.fragments.GamepadMapperFragment"/>
        <net.kdt.pojavlaunch.prefs.GamepadRemapPreference
            android:title="@string/preference_wipe_controller_title"
            android:summary="@string/preference_wipe_controller_description"
            />
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gamepad_deadzone_scale"
            android:title="@string/preference_deadzone_scale_title"
            android:summary="@string/preference_deadzone_scale_description"
            app2:showSeekBarValue="true"
            app2:min="@integer/gamepad_deadzone_seekbar_min"
            android:max="@integer/gamepad_deadzone_seekbar_max"
            app2:seekBarIncrement="@integer/gamepad_deadzone_seekbar_increment"
            />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_modrinth" android:title="@string/preference_category_keyboard">
        <SwitchPreferenceCompat
            android:key="keyboardAutoPanning"
            android:title="@string/preference_keyboard_autopan_title"
            android:summary="@string/preference_keyboard_autopan_summary"
            />
    </PreferenceCategory>

<PreferenceCategory android:layout="@layout/preference_category_modrinth" android:title="@string/preference_category_java_tweaks">
        <Preference
            android:key="install_jre"
            android:icon="@drawable/ic_modrinth_java"
            android:persistent="false"
            android:summary="@string/multirt_subtitle"
            android:title="@string/multirt_title"/>

        <androidx.preference.EditTextPreference
            android:dialogTitle="@string/mcl_setting_title_javaargs"
            android:icon="@drawable/ic_modrinth_java"
            android:key="javaArgs"
            android:singleLine="true"
            android:summary="@string/mcl_setting_subtitle_javaargs"
            android:title="@string/mcl_setting_title_javaargs" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="allocation"
            android:icon="@drawable/ic_modrinth_java"
            android:summary="@string/mcl_memory_allocation_subtitle"
            android:title="@string/mcl_memory_allocation"
            app2:showSeekBarValue="true"
            app2:min="@integer/memory_seekbar_min"
            app2:seekBarIncrement="@integer/memory_seekbar_increment"
            app2:selectable="false"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_modrinth_java"
            android:key="java_sandbox"
            android:summary="@string/mcl_setting_java_sandbox_subtitle"
            android:title="@string/mcl_setting_java_sandbox" />

    </PreferenceCategory>

<PreferenceCategory android:layout="@layout/preference_category_modrinth" android:title="@string/preference_category_miscellaneous">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_modrinth_sliders"
            android:key="checkGameFiles"
            android:summary="@string/preference_verify_game_files_description"
            android:title="@string/preference_verify_game_files_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_modrinth_sliders"
            android:key="fastStartupCheck"
            android:summary="@string/preference_go_vroom_description"
            android:title="@string/preference_go_vroom_title" />
        <androidx.preference.ListPreference
            android:defaultValue="default"
            android:icon="@drawable/ic_modrinth_sliders"
            android:key="downloadSource"
            android:entries="@array/download_source_names"
            android:entryValues="@array/download_source_values"
            android:title="@string/preference_download_source_title"
            android:summary="@string/preference_download_source_description"
            app2:useSimpleSummaryProvider="true"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_modrinth_sliders"
            android:key="verifyManifest"
            android:title="@string/preference_verify_manifest_title"
            android:summary="@string/preference_verify_manifest_description"/>
        <Preference
            android:key="microphoneAccessRequest"
            android:icon="@drawable/ic_modrinth_sliders"
            android:title="@string/preference_microphone_access_title"
            android:summary="@string/preference_microphone_access_description" />
        <Preference
            android:key="runDataMigration"
            android:icon="@drawable/ic_modrinth_sliders"
            android:title="@string/preference_data_migration_title"
            android:summary="@string/preference_data_migration_summary" />
        <Preference
            android:key="clearMetadataCache"
            android:title="@string/preference_metadata_clear"
            android:summary="@string/preference_metadata_clear_summary" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_modrinth_sliders"
            android:key="showMemoryWarning"
            android:title="@string/preference_show_memory_warning_title"
            android:summary="@string/preference_show_memory_warning_summary"/>

    </PreferenceCategory>

<PreferenceCategory android:layout="@layout/preference_category_modrinth" android:title="@string/preference_category_experimental_settings">

        <SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="freedrenoSysmem"
            android:title="@string/preference_sysmem_title"
            android:summary="@string/preference_sysmem_summary"
            />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alsoftForceOpenSL"
            android:icon="@drawable/ic_modrinth_experimental"
            android:title="@string/preference_alsoft_opensl_title"
            android:summary="@string/preference_alsoft_opensl_summary"
            />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ubwcWorkaround"
            android:title="@string/preference_ubwc_title"
            android:summary="@string/preference_ubwc_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>
